force-app/main/default/objects/Product2/fields/ERUM_Ancho_pala__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Ancho_pala__c</fullName>
    <label>Ancho pala</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>