force-app/main/default/objects/Product2/fields/ERUM_Bloqueado__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Bloqueado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bloqueado</label>
    <type>Checkbox</type>
</CustomField>