force-app/main/default/objects/Product2/fields/ERUM_Cantidad_por_palet__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Cantidad_por_palet__c</fullName>
    <label>Cantidad por palet</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>