force-app/main/default/objects/Product2/fields/ERUM_Cod_categoria_producto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Cod_categoria_producto__c</fullName>
    <label>Cód.categoría producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cod_categoria_producto</valueSetName>
    </valueSet>
</CustomField>