force-app/main/default/objects/Product2/fields/ERUM_Enviada_ERP__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Enviada_ERP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviada ERP</label>
    <type>Checkbox</type>
</CustomField>