force-app/main/default/objects/Product2/fields/ERUM_External_ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ERUM_External_ProductCode__c</fullName>
    <externalId>true</externalId>
    <label>Código Producto BC</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>