force-app/main/default/objects/Product2/fields/ERUM_Grupo_prod_Servicio__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Grupo_prod_Servicio__c</fullName>
    <label>Grupo prod. Servicio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo_prod_Servicio</valueSetName>
    </valueSet>
</CustomField>