force-app/main/default/objects/Product2/fields/ERUM_Grupo_registro_IVA_prod__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Grupo_registro_IVA_prod__c</fullName>
    <label>Grupo registro IVA prod.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo_registro_IVA_prod</valueSetName>
    </valueSet>
</CustomField>