force-app/main/default/objects/Product2/fields/ERUM_GTIN__c.field-meta.xml
<CustomField>
    <fullName>ERUM_GTIN__c</fullName>
    <label>GTIN</label>
    <length>10</length>
    <type>Text</type>
</CustomField>