force-app/main/default/objects/Product2/fields/ERUM_Material_producto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Material_producto__c</fullName>
    <label>Material producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Material_producto</valueSetName>
    </valueSet>
</CustomField>