force-app/main/default/objects/Product2/fields/ERUM_Media_percha__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Media_percha__c</fullName>
    <label>Media percha</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>