force-app/main/default/objects/Product2/fields/ERUM_Nivel_tecnoligico__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Nivel_tecnoligico__c</fullName>
    <label>Nivel tecnológico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No procede</fullName>
            </value>
            <value>
                <fullName>Bajo</fullName>
            </value>
            <value>
                <fullName>Medio</fullName>
            </value>
            <value>
                <fullName>Alto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>