force-app/main/default/objects/Product2/fields/ERUM_Peso_neto__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Peso_neto__c</fullName>
    <label>Peso neto</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>