force-app/main/default/objects/Product2/fields/ERUM_Peso_neto_cantidad_embalada__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Peso_neto_cantidad_embalada__c</fullName>
    <label>Peso neto cantidad embalada</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>