force-app/main/default/objects/Product2/fields/ERUM_Precio_venta__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Precio_venta__c</fullName>
    <label>Precio venta</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>