force-app/main/default/objects/Product2/fields/ERUM_Stock_disponible__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Stock_disponible__c</fullName>
    <inlineHelpText>Recuerde actualizar la página al consultar el Stock, tras 30 segundos, pulsando: &quot;ctrl&quot; + &quot;F5&quot;.</inlineHelpText>
    <label>Stock disponible</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>