force-app/main/default/objects/Product2/fields/ERUM_Tipo__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inventario</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>