force-app/main/default/objects/Product2/fields/ERUM_Tipo_de_materia_prima__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Tipo_de_materia_prima__c</fullName>
    <label>Tipo de materia prima</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No procede</fullName>
            </value>
            <value>
                <fullName>Virgen</fullName>
            </value>
            <value>
                <fullName>Reciclado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>