force-app/main/default/objects/Product2/fields/ERUM_Tipo_de_material__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Tipo_de_material__c</fullName>
    <label>Tipo de material</label>
    <length>50</length>
    <type>Text</type>
</CustomField>