force-app/main/default/objects/Product2/fields/ERUM_Tipo_palet__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Tipo_palet__c</fullName>
    <label>Tipo palet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Europeo</fullName>
            </value>
            <value>
                <fullName>Americano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>