force-app/main/default/objects/Product2/fields/ERUM_Volumen__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Volumen__c</fullName>
    <label>Volumen</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>