force-app/main/default/objects/Product2/fields/ERUM_Volumen_embalaje__c.field-meta.xml
<CustomField>
    <fullName>ERUM_Volumen_embalaje__c</fullName>
    <label>Volumen embalaje</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>