force-app/main/default/objects/Product2/fields/Fecha_envio_ERP__c.field-meta.xml
<CustomField>
    <fullName>Fecha_envio_ERP__c</fullName>
    <label>Fecha envío ERP</label>
    <type>Date</type>
</CustomField>