force-app/main/default/objects/Product2/recordTypes/ProductRetail.recordType-meta.xml
<RecordType>
    <fullName>ProductRetail</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar productos pertenecientes a la empresa de retail</description>
    <label>Retail</label>
</RecordType>