force-app/main/default/objects/Product2/recordTypes/ProductSeguridadVial.recordType-meta.xml
<RecordType>
    <fullName>ProductSeguridadVial</fullName>
    <active>true</active>
    <description>Tipo de registro para almacenar productos pertenecientes a la empresa de seguridad vial</description>
    <label>Seguridad Vial</label>
</RecordType>